--- a/index.html
+++ b/index.html
@@ -5,10 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nicolas R. Matsuda - Portfólio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
 
-    <header>
+    <nav class="navbar">
+        <div class="container">
+            <a href="#home" class="nav-logo">NRM</a>
+            <ul class="nav-menu">
+                <li class="nav-item"><a href="#sobre" class="nav-link">Sobre</a></li>
+                <li class="nav-item"><a href="#habilidades" class="nav-link">Habilidades</a></li>
+                <li class="nav-item"><a href="#cursos" class="nav-link">Cursos</a></li>
+                <li class="nav-item"><a href="curriculo.pdf" class="nav-link" download="Curriculo-Nicolas-Matsuda.pdf">Currículo</a></li>
+                <li class="nav-item"><a href="#contato" class="nav-link">Contato</a></li>
+            </ul>
+        </div>
+    </nav>
+
+    <header id="home">
         <div class="container">
             <h1>Nicolas Ryuji Matsuda</h1>
             <p>Desenvolvedor de Software em Formação</p>
@@ -42,28 +56,43 @@
         </section>
         
         <section id="cursos">
-    <div class="cursos-header">
-        <h2>Cursos e Certificados</h2>
-        <img src="https://www.alura.com.br/assets/img/alura-logo.svg" alt="Logo da Alura">
-    </div>
-            <p>Estes são alguns dos certificados mais relevantes que concluí na plataforma Alura. Clique no nome do curso para ver a certificação.</p>
-            <ul>
-                <li><a href="https://cursos.alura.com.br/user/matsudanick/course/java-refatoracao-melhorando-codigos-boas-praticas/certificate" target="_blank">Java: Refatoração + Primeira Aplicação</a> - Alura</li>
-                <li><a href="https://cursos.alura.com.br/user/matsudanick/course/cobol-desenvolvendo-aplicacoes/certificate" target="_blank">COBOL: Desenvolvendo Aplicações com Dados</a> - Alura</li>
-                <li><a href="https://cursos.alura.com.br/user/matsudanick/course/flutter-implementando-persistencia-dados-drift-hive/certificate" target="_blank">Flutter: Persistência com Drift/Hive</a> - Alura</li>
-                <li><a href="#" target="_blank">MySQL & Análise de Dados</a> - Alura</li>
-                <li><a href="#" target="_blank">UX Design & HTML/CSS</a> - Alura</li>
-            </ul>
+            <div class="cursos-header">
+                <h2>Cursos e Certificados</h2>
+                <img src="https://www.alura.com.br/assets/img/alura-logo.svg" alt="Logo da Alura">
+            </div>
+            <p class="section-intro">Estes são alguns dos certificados mais relevantes que concluí na plataforma Alura. Clique no nome do curso para ver a certificação.</p>
+            <div class="cursos-grid">
+                <div class="curso-card">
+                    <h3>Java: Refatoração + Primeira Aplicação</h3>
+                    <p><a href="https://cursos.alura.com.br/user/matsudanick/course/java-refatoracao-melhorando-codigos-boas-praticas/certificate" target="_blank">Ver Certificado</a></p>
+                </div>
+                <div class="curso-card">
+                    <h3>COBOL: Desenvolvendo Aplicações com Dados</h3>
+                    <p><a href="https://cursos.alura.com.br/user/matsudanick/course/cobol-desenvolvendo-aplicacoes/certificate" target="_blank">Ver Certificado</a></p>
+                </div>
+                <div class="curso-card">
+                    <h3>Flutter: Persistência com Drift/Hive</h3>
+                    <p><a href="https://cursos.alura.com.br/user/matsudanick/course/flutter-implementando-persistencia-dados-drift-hive/certificate" target="_blank">Ver Certificado</a></p>
+                </div>
+                <div class="curso-card">
+                    <h3>MySQL & Análise de Dados</h3>
+                    <p><a href="#" target="_blank">Ver Certificado</a></p>
+                </div>
+                <div class="curso-card">
+                    <h3>UX Design & HTML/CSS</h3>
+                    <p><a href="#" target="_blank">Ver Certificado</a></p>
+                </div>
+            </div>
         </section>
 
         <section id="contato">
             <h2>Contato</h2>
-            <p>Gostou do meu perfil? Entre em contato!</p>
-            <ul>
-                <li><strong>Email:</strong> <a href="mailto:matsudanick@gmail.com">matsudanick@gmail.com</a></li>
-                <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/matsudanick/" target="_blank">linkedin.com/in/matsudanick</a></li>
-                <li><strong>GitHub:</strong> <a href="https://github.com/seu-usuario" target="_blank">github.com/seu-usuario</a></li>
-            </ul>
+            <p class="section-intro">Gostou do meu perfil? Entre em contato!</p>
+            <div class="contato-links">
+                <a href="mailto:matsudanick@gmail.com"><i class="fas fa-envelope"></i> Email</a>
+                <a href="https://www.linkedin.com/in/matsudanick/" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
+                <a href="https://github.com/seu-usuario" target="_blank"><i class="fab fa-github"></i> GitHub</a>
+            </div>
         </section>
 
     </main>
