--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <section id="sobre">
             <h2>Sobre Mim</h2>
             <p>
-                Estudante de Análise e Desenvolvimento de Sistemas com dupla cidadania (brasileira/japonesa) e paixão por resolver problemas com tecnologia. Com experiência internacional no Japão e vivência em suporte técnico, busco uma oportunidade para aplicar e expandir meus conhecimentos em desenvolvimento e análise de dados, com o objetivo de criar soluções eficientes.
+                Apaixonado por tecnologia e estudante de Análise e Desenvolvimento de Sistemas. Minha experiência em suporte técnico aprimorou minha habilidade de diagnosticar e solucionar problemas, competência que agora direciono para o desenvolvimento de software e análise de dados. Busco uma oportunidade para criar soluções eficientes em um ambiente desafiador. Dupla cidadania (brasileira/japonesa).
             </p>
         </section>
 
@@ -106,3 +106,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
