--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <section id="sobre">
             <h2>Sobre Mim</h2>
             <p>
-                Apaixonado por tecnologia e estudante de Análise e Desenvolvimento de Sistemas. Minha experiência em suporte técnico aprimorou minha habilidade de diagnosticar e solucionar problemas, competência que agora direciono para o desenvolvimento de software e análise de dados. Busco uma oportunidade para criar soluções eficientes em um ambiente desafiador. Dupla cidadania (brasileira/japonesa).
+                Estudante de Análise e Desenvolvimento de Sistemas, meu objetivo é criar soluções eficientes através da tecnologia. Minha dupla cidadania (brasileira/japonesa) e a experiência profissional no exigente setor de autopeças no Japão, somadas à vivência em suporte técnico, demonstram minha alta capacidade de adaptação e foco em resultados.
             </p>
         </section>
 
@@ -106,4 +106,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
