--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div class="contato-links">
                 <a href="mailto:matsudanick@gmail.com"><i class="fas fa-envelope"></i> Email</a>
                 <a href="https://www.linkedin.com/in/matsudanick/" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
-                <a href="https://github.com/seu-usuario" target="_blank"><i class="fab fa-github"></i> GitHub</a>
+                <a href="https://github.com/matsudanick" target="_blank"><i class="fab fa-github"></i> GitHub</a>
             </div>
         </section>
 
@@ -106,5 +106,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
